--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@slack/web-api": "^7.0.2",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.1.46",
+    "discourse2-chat": "^1.1.1",
     "exa-js": "^1.4.10",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
