--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Slack Credentials
 # Get these from your Slack app configuration at https://api.slack.com/apps
 DISCOURSE_BOT_TOKEN=xoxb-your-bot-token        # Bot User OAuth Token from OAuth & Permissions
+DISCOURSE_URL=https://community.yourdomain.com/
 DISCOURSE_SIGNING_SECRET=your-signing-secret   # Signing Secret from Basic Information
 
 # OpenAI Credentials
