--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ai-sdk/openai": "^1.1.14",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai-compatible": "^0.2.14",
     "@slack/web-api": "^7.0.2",
     "@vercel/functions": "^2.0.0",
-    "ai": "^4.1.46",
+    "ai": "^4.3.16",
     "discourse2-chat": "^1.1.5",
     "exa-js": "^1.4.10",
     "zod": "^3.24.2"
