refactor: update TypeScript configuration and improve type imports
- Removed unnecessary "paths" configuration from tsconfig.json.
- Changed import statements in chat.ts and webhook.ts to use 'import type' for better clarity and performance.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "outDir": "./dist",
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "outDir": "./dist"
   },
   "exclude": [
     "node_modules",
