--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc && pnpm run openapi-ts",
+    "start": "node dist/index.js",
+    "openapi-ts": "openapi-ts"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +14,18 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/openai-compatible": "^0.2.14",
+    "@hey-api/client-fetch": "^0.10.1",
     "@slack/web-api": "^7.0.2",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.3.16",
     "discourse2-chat": "^1.1.5",
     "exa-js": "^1.4.10",
+    "tsx": "^4.19.4",
+    "vercel": "^42.1.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "^0.67.5",
     "@types/node": "^20.11.17",
     "typescript": "^5.3.3"
   },
