feat: Enhance bot functionality and improve response generation
- Updated generateResponse to include bot creator information.
- Modified handle-app-mention to utilize GetSessionResponse for user identification.
- Enhanced handle-messages to check for keywords and direct messages before processing.
- Refactored slack-utils to accept GetSessionResponse for user identification in getThread.
- Updated OpenAPI specifications to remove unnecessary required fields and improve response descriptions.
- Adjusted package.json build script to streamline the build process.
- Made profile_background_upload_url optional in User interface for better flexibility.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && pnpm run openapi-ts",
+    "build": "tsc",
     "start": "node dist/index.js",
     "openapi-ts": "openapi-ts"
   },
