--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js",    
+    "format": "biome format --write .",
+    "lint": "tsx ./scripts/lint.mts && biome lint .",
+    "lint:write": "biome lint --write .",
+    "lint:unsafe": "biome lint --write --unsafe .",
+    "check": "biome check .",
+    "check:unsafe": "biome check --write --unsafe .",
+    "check:write": "biome check --write .",
     "openapi-ts": "openapi-ts"
   },
   "keywords": [],
