--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,6 @@
     "skipLibCheck": true,
     "outDir": "./dist"
   },
-  "exclude": [
-    "node_modules",
-  ],
-  "include": [
-    "api"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["api"]
 }
