feat: Update environment configuration; add Discourse credentials and integrate env-core package

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# Slack Credentials
-# Get these from your Slack app configuration at https://api.slack.com/apps
-DISCOURSE_BOT_TOKEN=xoxb-your-bot-token        # Bot User OAuth Token from OAuth & Permissions
+# Discourse Credentials
+# Get these from your Discourse Forum
+
+# Bot User OAuth Token from OAuth & Permissions
+DISCOURSE_BOT_TOKEN=your-bot-token
 DISCOURSE_URL=https://community.yourdomain.com/
-DISCOURSE_SIGNING_SECRET=your-signing-secret   # Signing Secret from Basic Information
+# Signing Secret from Basic Information
+DISCOURSE_SIGNING_SECRET=your-signing-secret
 
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
