--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-sdk-slack-chatbot",
+  "name": "ai-sdk-discourse-chatbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -24,14 +24,13 @@
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/openai-compatible": "^0.2.14",
     "@hey-api/client-fetch": "^0.10.1",
-    "@slack/web-api": "^7.0.2",
     "@t3-oss/env-core": "^0.13.4",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.3.16",
     "discourse2-chat": "^1.1.5",
     "exa-js": "^1.4.10",
-    "tsx": "^4.19.4",
     "nitropack": "latest",
+    "tsx": "^4.19.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
