--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/openai-compatible": "^0.2.14",
     "@hey-api/client-fetch": "^0.10.1",
+    "@mem0/vercel-ai-provider": "^1.0.5",
+    "@openrouter/ai-sdk-provider": "^0.4.6",
     "@t3-oss/env-core": "^0.13.4",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.3.16",
