--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/openai-compatible": "^0.2.14",
+    "@date-fns/tz": "^1.2.0",
     "@hey-api/client-fetch": "^0.10.1",
     "@mem0/vercel-ai-provider": "^1.0.5",
     "@openrouter/ai-sdk-provider": "^0.4.6",
     "@t3-oss/env-core": "^0.13.4",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.3.16",
+    "compromise": "^14.14.4",
+    "date-fns": "^4.1.0",
     "discourse2-chat": "^1.1.5",
     "exa-js": "^1.4.10",
     "nitropack": "latest",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "tsx": "^4.19.4",
     "zod": "^3.24.2"
   },
