feat: vibe-slop refactor to slack bolt

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,12 @@
-# Discourse Credentials
-# Get these from your Discourse Forum
-
+# Slack Credentials
 # Bot User OAuth Token from OAuth & Permissions
-DISCOURSE_BOT_TOKEN=your-bot-token
-DISCOURSE_URL=https://community.yourdomain.com/
+SLACK_BOT_TOKEN=xoxb-your-bot-token
 # Signing Secret from Basic Information
-DISCOURSE_SIGNING_SECRET=your-signing-secret
+SLACK_SIGNING_SECRET=your-signing-secret
+# Optional: Socket Mode token (requires connections:write scope)
+SLACK_APP_TOKEN=xapp-your-app-token
+SLACK_SOCKET_MODE=true
 
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key
-EXA_API_KEY=your-exa-api-key
