--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "ai-sdk-discourse-chatbot",
+  "name": "ai-sdk-slack-chatbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "nitro build",
-    "dev": "nitro dev",
-    "prepare": "nitro prepare",
-    "preview": "node .output/server/index.mjs",
+    "build": "tsc -p tsconfig.json",
+    "dev": "tsx watch server/index.ts",
+    "start": "node dist/index.js",
     "format": "biome format --write .",
-    "lint": "tsx ./scripts/lint.mts && biome lint .",
-    "lint:write": "biome lint --write .",
-    "lint:unsafe": "biome lint --write --unsafe .",
-    "check": "biome check .",
-    "check:unsafe": "biome check --write --unsafe .",
-    "check:write": "biome check --write .",
-    "openapi-ts": "openapi-ts"
+    "lint": "biome lint .",
+    "lint:fix": "biome lint --write .",
+    "check": "biome check ."
   },
   "keywords": [],
   "author": "",
@@ -24,31 +19,24 @@
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/openai-compatible": "^0.2.14",
     "@date-fns/tz": "^1.2.0",
-    "@hey-api/client-fetch": "^0.10.1",
     "@mem0/vercel-ai-provider": "^1.0.5",
     "@openrouter/ai-sdk-provider": "^0.4.6",
+    "@slack/bolt": "^3.19.0",
     "@t3-oss/env-core": "^0.13.4",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
-    "@vercel/functions": "^2.1.0",
     "ai": "^4.3.16",
     "compromise": "^14.14.4",
     "date-fns": "^4.1.0",
-    "discourse2-chat": "^1.1.5",
-    "exa-js": "^1.4.10",
-    "nitropack": "latest",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
-    "tsx": "^4.19.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@hey-api/openapi-ts": "^0.67.5",
     "@types/node": "^20.11.17",
-    "typescript": "^5.3.3",
-    "@types/bun": "latest"
+    "tsx": "^4.19.4",
+    "typescript": "^5.3.3"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "private": true
 }
