feat: setup langfuse

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ SLACK_SOCKET_MODE=true
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key
+
+# Langfuse
+LANGFUSE_SECRET_KEY="sk-lf-..."
+LANGFUSE_PUBLIC_KEY="pk-lf-..."
+LANGFUSE_BASEURL="https://cloud.langfuse.com" # 🇪🇺 EU region, use "https://us.cloud.langfuse.com" for US region
