--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "@date-fns/tz": "^1.4.1",
     "@mem0/vercel-ai-provider": "^2.0.4",
     "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@opentelemetry/api-logs": "^0.206.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.65.0",
+    "@opentelemetry/instrumentation": "^0.206.0",
+    "@opentelemetry/sdk-logs": "^0.206.0",
+    "@opentelemetry/sdk-node": "^0.206.0",
     "@slack/bolt": "^3.22.0",
     "@t3-oss/env-core": "^0.13.8",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "@vercel/otel": "^2.0.1",
     "ai": "^5.0.76",
     "compromise": "^14.14.4",
     "date-fns": "^4.1.0",
+    "langfuse-vercel": "^3.38.6",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
