feat: gork-ify the bot and add a lot more dependencies
Co-authored-by: Anirudh <techwithanirudh@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,11 @@ OPENAI_API_KEY=your-openai-api-key
 LANGFUSE_SECRET_KEY="sk-lf-..."
 LANGFUSE_PUBLIC_KEY="pk-lf-..."
 LANGFUSE_BASEURL="https://cloud.langfuse.com" # 🇪🇺 EU region, use "https://us.cloud.langfuse.com" for US region
+
+# Exa web search
+EXA_API_KEY=""
+
+# Memory
+PINECONE_API_KEY=""
+PINECONE_INDEX=""
+COHERE_API_KEY=""
