--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@ai-sdk/cohere": "^2.0.14",
     "@date-fns/tz": "^1.4.1",
     "@mem0/vercel-ai-provider": "^2.0.4",
     "@openrouter/ai-sdk-provider": "^1.2.0",
@@ -22,14 +23,18 @@
     "@opentelemetry/instrumentation": "^0.206.0",
     "@opentelemetry/sdk-logs": "^0.206.0",
     "@opentelemetry/sdk-node": "^0.206.0",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@slack/bolt": "^4.5.0",
     "@t3-oss/env-core": "^0.13.8",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
     "@vercel/otel": "^2.0.1",
     "ai": "^5.0.76",
+    "ai-fallback": "^1.0.7",
     "compromise": "^14.14.4",
     "date-fns": "^4.1.0",
+    "exa-js": "^1.10.2",
+    "jsonrepair": "^3.13.1",
     "langfuse-vercel": "^3.38.6",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
