feat: add option to add gork users to channel automatically

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ SLACK_BOT_TOKEN=xoxb-your-bot-token
 SLACK_SIGNING_SECRET=your-signing-secret
 SLACK_SOCKET_MODE=true
 
+# Channel to add user to automatically when they mention the bot (optional)
+#AUTO_ADD_CHANNEL="C<add here>"
+
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key
