--- a/slack-manifest.json
+++ b/slack-manifest.json
@@ -27,8 +27,9 @@
         "reactions:read",
         "reactions:write",
         "team:read",
+        "users.profile:read",
         "users:read",
-        "users.profile:read"
+        "mpim:read"
       ]
     }
   },
@@ -36,6 +37,8 @@
     "event_subscriptions": {
       "bot_events": [
         "app_mention",
+        "member_joined_channel",
+        "member_left_channel",
         "message.channels",
         "message.groups",
         "message.im",
