feat: add opt-in capability for compliance with rules in some slack workspaces

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ SLACK_SOCKET_MODE=true
 
 # Channel to add user to automatically when they mention the bot (optional)
 #AUTO_ADD_CHANNEL="C<add here>"
+# Channel required for usage of Gork beyond pings
+#OPT_IN_CHANNEL="C<add here>"
 
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
