feat: improve README and .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ SLACK_SOCKET_MODE=true
 # Channel required for usage of Gork beyond pings
 #OPT_IN_CHANNEL="C<add here>"
 
+# For Upstash
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
+
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key
