feat: migrate from Upstash to standard Redis for rate limiting

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,8 @@ SLACK_SOCKET_MODE=true
 # Channel required for usage of Gork beyond pings
 #OPT_IN_CHANNEL="C<add here>"
 
-# For Upstash
-UPSTASH_REDIS_REST_URL=""
-UPSTASH_REDIS_REST_TOKEN=""
+# For ratelimiting
+REDIS_URL="redis://<add here>"
 
 # OpenAI Credentials
 # Get this from your OpenAI account at https://platform.openai.com/api-keys
