--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "@pinecone-database/pinecone": "^6.1.2",
     "@slack/bolt": "^4.5.0",
     "@t3-oss/env-core": "^0.13.8",
-    "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.6",
     "@vercel/otel": "^2.0.1",
     "ai": "^5.0.76",
     "ai-fallback": "^1.0.7",
@@ -41,6 +39,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.6",
+    "@types/bun": "^1.3.1",
     "typescript": "^5.9.3"
   },
   "private": true
