fix: correct api key naming in .env.example

--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,8 @@ SLACK_SOCKET_MODE=true
 # For ratelimiting
 REDIS_URL="redis://<add here>"
 
-# OpenAI Credentials
-# Get this from your OpenAI account at https://platform.openai.com/api-keys
-OPENAI_API_KEY=your-openai-api-key
+# OpenRouter credentials
+OPENROUTER_API_KEY=your-openrouter-api-key
 
 # Langfuse
 LANGFUSE_SECRET_KEY="sk-lf-..."
