feat: add hackclub AI as a provider

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,9 @@ SLACK_SOCKET_MODE=true
 # For ratelimiting
 REDIS_URL="redis://<add here>"
 
-# OpenRouter credentials
+# AI inference credentials
 OPENROUTER_API_KEY=your-openrouter-api-key
+HACKCLUB_API_KEY=your-hackclub-api-key
 
 # Langfuse
 LANGFUSE_SECRET_KEY="sk-lf-..."
