--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,8 @@ SLACK_SOCKET_MODE=true
 # For ratelimiting
 REDIS_URL="redis://<add here>"
 
-# AI inference credentials
+# OpenRouter credentials
 OPENROUTER_API_KEY=your-openrouter-api-key
-HACKCLUB_API_KEY=your-hackclub-api-key
 
 # Langfuse
 LANGFUSE_SECRET_KEY="sk-lf-..."
