--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "biome format --write .",
     "lint": "biome lint .",
     "lint:fix": "biome lint --write .",
-    "check": "biome check ."
+    "check": "biome check .",
+    "fix": "biome check --write"
   },
   "keywords": [],
   "author": "",
