--- a/package.json
+++ b/package.json
@@ -16,23 +16,18 @@
   "license": "MIT",
   "dependencies": {
     "@date-fns/tz": "^1.4.1",
-    "@openrouter/ai-sdk-provider": "^1.4.0",
-    "@opentelemetry/api-logs": "^0.206.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.65.0",
-    "@opentelemetry/instrumentation": "^0.206.0",
-    "@opentelemetry/sdk-logs": "^0.206.0",
-    "@opentelemetry/sdk-node": "^0.206.0",
+    "@langfuse/otel": "^4.4.9",
+    "@langfuse/tracing": "^4.4.9",
+    "@opentelemetry/sdk-node": "^0.208.0",
     "@pinecone-database/pinecone": "^6.1.3",
     "@slack/bolt": "^4.6.0",
     "@t3-oss/env-core": "^0.13.8",
-    "@vercel/otel": "^2.1.0",
     "ai": "^5.0.106",
     "ai-fallback": "^1.0.8",
     "compromise": "^14.14.4",
     "date-fns": "^4.1.0",
     "exa-js": "^1.10.2",
     "jsonrepair": "^3.13.1",
-    "langfuse-vercel": "^3.38.6",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.1.13"
