--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@date-fns/tz": "^1.4.1",
     "@langfuse/otel": "^4.5.1",
     "@langfuse/tracing": "^4.5.1",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
     "@opentelemetry/sdk-node": "^0.208.0",
     "@pinecone-database/pinecone": "^6.1.3",
     "@slack/bolt": "^4.6.0",
