--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,13 +1,29 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
   "vcs": {
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true
   },
   "files": {
-    "includes": ["**", "!**/node_modules"]
+    "ignoreUnknown": true,
+    "includes": [
+      "!node_modules",
+      "!**/dist",
+      "!**/public",
+      "!.github",
+      "!.vercel",
+      "!bun.lock",
+      "!**/*.md",
+      "!**/*.mdx"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -31,5 +47,8 @@
       },
       "recommended": true
     }
-  }
+  },
+  "extends": [
+    "ultracite/biome/core"
+  ]
 }
