--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "ai-sdk-slack-chatbot",
+  "name": "gork-slack",
   "version": "1.0.0",
-  "description": "",
+  "license": "MIT",
+  "description": "A human-like bot (called Gork) that is almost indistinguishable from a real person. This is a port of the original Gork for Discord to Slack.",
+  "private": true,
   "scripts": {
     "dev": "bun run --watch server/index.ts",
     "start": "bun run server/index.ts",
     "format": "biome format --write .",
-    "lint": "biome lint .",
-    "lint:fix": "biome lint --write .",
     "check": "biome check .",
-    "fix": "biome check --write"
+    "check:spelling": "cspell -c .cspell.jsonc --no-progress --no-summary --no-must-find-files --unique --cache",
+    "check:unsafe": "biome fix --unsafe true .",
+    "check:write": "biome fix .",
+    "typecheck": "tsc --noEmit",
+    "prepare": "lefthook install"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@date-fns/tz": "^1.4.1",
     "@langfuse/otel": "^4.5.1",
@@ -34,9 +35,15 @@
     "zod": "^4.3.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.10",
+    "@biomejs/biome": "2.3.11",
     "@types/bun": "^1.3.5",
-    "typescript": "^5.9.3"
-  },
-  "private": true
+    "lefthook": "^2.0.15",
+    "typescript": "^5.9.3",
+    "ultracite": "7.0.11",
+    "cspell": "^9.4.0",
+    "@cspell/dict-bash": "^4.2.2",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "@commitlint/types": "^20.2.0"
+  }
 }
