chore: update ai and zod dependencies to latest versions

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -48,7 +48,10 @@
       "recommended": true
     }
   },
-  "extends": [
-    "ultracite/biome/core"
-  ]
+  "json": {
+    "parser": {
+      "allowComments": true
+    }
+  },
+  "extends": ["ultracite/biome/core"]
 }
