--- a/.cspell.jsonc
+++ b/.cspell.jsonc
@@ -7,5 +7,34 @@
   "import": ["@cspell/dict-bash/cspell-ext.json"],
   "useGitignore": true,
   "version": "0.2",
-  "words": []
+  "words": [
+    "Anirudh",
+    "Devarsh",
+    "GORK",
+    "Gork",
+    "Gork's",
+    "HACKCLUB",
+    "Jsonify",
+    "OPENROUTER",
+    "Qwik",
+    "Sriram",
+    "Ultracite",
+    "cynicist",
+    "gork",
+    "hackclub",
+    "imgork",
+    "jsonrepair",
+    "livecrawl",
+    "mpim",
+    "openrouter",
+    "roleplay",
+    "shitposter",
+    "ultracite",
+    "webdev",
+    "xapp",
+    "xoxb",
+    "zadd",
+    "zcard",
+    "zremrangebyscore"
+  ]
 }
