chore: enhance configuration and improve error handling

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -45,6 +45,17 @@
       "correctness": {
         "noUnusedImports": "error"
       },
+      "complexity": {
+        "noExcessiveCognitiveComplexity": {
+          "level": "error",
+          "options": {
+            "maxAllowedComplexity": 25
+          }
+        }
+      },
+      "performance": {
+        "noBarrelFile": "off"
+      },
       "recommended": true
     }
   },
