--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "dependencies": {
     "@date-fns/tz": "^1.4.1",
+    "@exalabs/ai-sdk": "^1.0.5",
     "@langfuse/otel": "^4.5.1",
     "@langfuse/tracing": "^4.5.1",
     "@openrouter/ai-sdk-provider": "^1.5.4",
-    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/sdk-node": "^0.210.0",
     "@pinecone-database/pinecone": "^6.1.3",
     "@slack/bolt": "^4.6.0",
     "@t3-oss/env-core": "^0.13.10",
@@ -27,7 +28,6 @@
     "ai-fallback": "^1.0.8",
     "compromise": "^14.14.5",
     "date-fns": "^4.1.0",
-    "exa-js": "^1.10.2",
     "jsonrepair": "^3.13.2",
     "pino": "^10.2.0",
     "pino-pretty": "^13.1.3",
