--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@slack/bolt": "^4.6.0",
     "@t3-oss/env-core": "^0.13.10",
     "ai": "^5.0.121",
-    "ai-fallback": "^1.0.8",
+    "ai-retry": "^0.12.0",
     "compromise": "^14.14.5",
     "date-fns": "^4.1.0",
     "jsonrepair": "^3.13.2",
@@ -35,14 +35,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
-    "@types/bun": "^1.3.6",
-    "lefthook": "^2.0.15",
-    "typescript": "^5.9.3",
-    "ultracite": "7.0.11",
-    "cspell": "^9.4.0",
-    "@cspell/dict-bash": "^4.2.2",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
-    "@commitlint/types": "^20.2.0"
+    "@commitlint/types": "^20.2.0",
+    "@cspell/dict-bash": "^4.2.2",
+    "@types/bun": "^1.3.6",
+    "cspell": "^9.4.0",
+    "lefthook": "^2.0.15",
+    "typescript": "^5.9.3",
+    "ultracite": "7.0.11"
   }
 }
