chore: add @ai-sdk/openai-compatible dependency and update provider implementation

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^1.0.30",
     "@date-fns/tz": "^1.4.1",
     "@exalabs/ai-sdk": "^1.0.5",
     "@langfuse/otel": "^4.5.1",
