feat: implement user ban and unban commands with report management

--- a/slack-manifest.json
+++ b/slack-manifest.json
@@ -6,7 +6,27 @@
     "bot_user": {
       "display_name": "gork",
       "always_online": true
-    }
+    },
+    "slash_commands": [
+      {
+        "command": "/ban",
+        "description": "Ban a user from using Gork",
+        "usage_hint": "@username",
+        "should_escape": false
+      },
+      {
+        "command": "/unban",
+        "description": "Unban a user and clear their reports",
+        "usage_hint": "@username",
+        "should_escape": false
+      },
+      {
+        "command": "/reports",
+        "description": "View and manage reports for a user",
+        "usage_hint": "@username",
+        "should_escape": false
+      }
+    ]
   },
   "oauth_config": {
     "scopes": {
@@ -24,6 +44,7 @@
         "im:write",
         "mpim:history",
         "mpim:read",
+        "commands",
         "mpim:write",
         "reactions:read",
         "reactions:write",
