--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@opentelemetry/sdk-node": "^0.210.0",
     "@pinecone-database/pinecone": "^6.1.3",
     "@slack/bolt": "^4.6.0",
+    "@slack/types": "^2.19.0",
     "@t3-oss/env-core": "^0.13.10",
     "ai": "^5.0.121",
     "ai-retry": "^0.12.0",
