--- a/slack-manifest.json
+++ b/slack-manifest.json
@@ -9,18 +9,9 @@
     },
     "slash_commands": [
       {
-        "command": "/gork-ban",
-        "description": "Ban a user from using Gork",
-        "should_escape": false
-      },
-      {
-        "command": "/gork-unban",
-        "description": "Unban a user and clear their reports",
-        "should_escape": false
-      },
-      {
-        "command": "/gork-reports",
-        "description": "View and manage reports for a user",
+        "command": "/gork",
+        "description": "Gork commands",
+        "usage_hint": "<subcommand> [args]",
         "should_escape": false
       }
     ]
