--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ SLACK_SOCKET_MODE=true
 # Channel required for usage of Gork beyond pings
 #OPT_IN_CHANNEL="C<add here>"
 
+# Channel to send reports to
+#REPORTS_CHANNEL="C<add here>"
+# Comma-separated or JSON array of admin user IDs who can use /ban, /unban, /reports
+#ADMINS=U0G9QF9C6,U1H63D8SZ ## If using this variable, CHANGE THESE
+
 # For ratelimiting
 REDIS_URL="redis://<add here>"
 
