feat: improve command handling and enhance ban/unban comamnds

--- a/slack-manifest.json
+++ b/slack-manifest.json
@@ -12,7 +12,7 @@
         "command": "/gork",
         "description": "Gork commands",
         "usage_hint": "<subcommand> [args]",
-        "should_escape": false
+        "should_escape": true
       }
     ]
   },
