--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compromise": "^14.14.5",
     "date-fns": "^4.1.0",
     "jsonrepair": "^3.13.2",
+    "p-queue": "^9.1.0",
     "pino": "^10.2.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.3.5"
