feat: add chat:write.public scope to slack-manifest.json

--- a/slack-manifest.json
+++ b/slack-manifest.json
@@ -41,7 +41,8 @@
         "users:read",
         "channels:manage",
         "files:read",
-        "files:write"
+        "files:write",
+        "chat:write.public"
       ]
     }
   },
